<resources>
    <string name="app_name" translatable="false">TrovaLaSonda</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="mhz" translatable="false">MHz</string>
    <string name="dbm" translatable="false">-dBm</string>
    <string name="km" translatable="false">km</string>
    <string name="sqkxy_tracker_logo" translatable="false">SQKXY tracker logo</string>
    <string name="sondehub_logo" translatable="false">sondehub logo</string>
    <string name="title_activity_scrolling" translatable="false">Trova la sonda</string>
    <string name="CLOSE">Close</string>
    <string name="CONNECTED">Connected</string>
    <string name="CONNECTION_LOST">Connection to receiver lost</string>
    <string name="CANNOT_CONNECT">Cannot connect !</string>
    <string name="RECEIVER_NOT_CONNECTED">Receiver not connected</string>
    <string name="LATITUDE_COPIED">Latitude copied to clipboard</string>
    <string name="LONGITUDE_COPIED">Longitude copied to clipboard</string>
    <string name="COORDINATES_COPIED">Coordinates copied to clipboard</string>
    <string name="NO_SONDE_TO_OPEN_A_WEBPAGE_FOR">No sonde to open a webpage for</string>
    <string name="SHOW_A_WEB_PAGE">Show a web page for this sonde</string>
    <string name="NO_CURRENT_LOCATION">No current location (yet)</string>
    <string name="RADIO_SETTINGS">Radio settings (radio must be connected)</string>
    <string name="NO_SONDE_TO_SHOW">No sonde to show</string>
    <string name="CHOOSE_LAYER">Choose layer (Mapnik/CyclOSM/satellite)</string>
    <string name="CENTER_SONDE_ON_MAP">Center sonde on map (if receiving location data)</string>
    <string name="NO_SONDE_TO_NAVIGATE_TO">No sonde to navigate to</string>
    <string name="ROUTE_TO_PREDICTED_LANDING_SITE">Route to predicted landing site</string>
    <string name="CONNECTED_TO">Connected to </string>
    <string name="BATTERY_">Battery </string>
    <string name="BY_CAR">By car: </string>
    <string name="MAP_STYLE_SELECTED">map style selected</string>
    <string name="FIRMWARE_UPDATE_AVAILABLE">Firmware update available</string>
    <string name="A_NEW_VERSION_OF_THE_FIRMWARE">A new version of the firmware is available for this receiver.\nDo you want to update the receiver now?</string>
    <string name="UPDATE_NOW">Update now</string>
    <string name="DOWNLOADING_FIRMWARE">Downloading firmware</string>
    <string name="THE_FIRMWARE_WILL_BE_LOADED">The firmware will be loaded on the receiver once the download is complete</string>
    <string name="FIRMWARE_DOWNLOAD_FAILED">Firmware download failed</string>
    <string name="UPDATING_FIRMWARE">Updating firmware</string>
    <string name="THE_FIRMWARE_HAS_BEEN_DOWNLOADED">The firmware has been downloaded. Now updating the radio</string>
    <string name="FIRMWARE_UPDATE_FAILED">Firmware update failed</string>
    <string name="FIRMWARE_UPDATE_FINISHED">Firmware update finished</string>
    <string name="WAIT_FOR_THE_RADIO_TO_REBOOT">Wait for the radio to reboot and reconnect</string>
    <string name="ARE_YOU_SURE_YOU_WANT_TO_EXIT">Are you sure you want to exit?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="ALERT">Alert</string>
    <string name="CANCEL">Cancel</string>
    <string name="NEW_SETTINGS_REQUIRE_A_RESTART">New settings require to restart the receiver, do you want to apply them anyway?</string>
    <string name="tune">Tune</string>
    <string name="offset">Offset</string>
    <string name="radio">Radio</string>
    <string name="type">Type</string>
    <string name="battery">Battery</string>
    <string name="battery_pin">Battery pin</string>
    <string name="rst_pin">RST pin</string>
    <string name="scl_pin">SCL pin</string>
    <string name="sda_pin">SDA pin</string>
    <string name="sonde_settings">Sonde settings</string>
    <string name="frequency">frequency</string>
    <string name="toggle_buzzer">Toggle buzzer</string>
    <string name="no_sonde">[no sonde]</string>
    <string name="menu">Menu</string>
    <string name="center_user_in_map">Center user in map</string>
    <string name="center_sonde_in_map">Center sonde in map</string>
    <string name="change_map_layer">Change map layer</string>
    <string name="launch_navigation">Launch navigation</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="map">map</string>
    <string name="battery_level">battery level</string>
    <string name="open_web_page">Open web page</string>
    <string name="ReportYourFinding">Report your finding</string>
    <string name="title_activity_donation">Donation</string>
    <string name="SERIAL_NUMBER_FOR_THE_SONDE_YOU_ARE_RECEIVING">Serial number for the sonde you are receiving</string>
    <string name="YOU_CAN_TAP_IT_TO_OPEN_SONDEHUB_OR_RADIOSONDY"> You can tap it to open Sondehub or radiosondy.info</string>
    <string name="DISTANCE">Distance</string>
    <string name="BETWEEN_YOU_AND_THE_SONDE_YOU_ARE_RECEIVING">Between you and the sonde you are receiving. Tap to activate hunting mode</string>
    <string name="BUZZER">Buzzer</string>
    <string name="MUTE_YOUR_RECEIVER_TAPPING_THIS">Mute your receiver tapping this</string>
    <string name="BATTERY">Battery</string>
    <string name="KEEP_AN_EYE_ON_YOUR_RECEIVER_BATTERY_LEVEL">Keep an eye on your receiver\'s battery level</string>
    <string name="RSSI" translatable="false">RSSI</string>
    <string name="SIGNAL_STRENGTH_IS_SHOWN_HERE">Signal strength is shown here</string>
    <string name="MAP_LAYERS">Map layers</string>
    <string name="CHOOSE_BETWEEN_THREE_DIFFERENT_MAP_LAYERS">Choose between three different map layers</string>
    <string name="NAVIGATION">Navigation</string>
    <string name="LAUNCH_GOOGLE_MAPS">Launch Google maps for driving directions to the sonde current position\nLong tap fo selecting a different app for navigation</string>
    <string name="RECEIVER_PARAMETERS">Receiver parameters</string>
    <string name="SET_PINS_BANDWIDTH_AND_CALIBRATION_FOR_YOUR_RECEIVER">Set pins, bandwidth and calibration for your receiver</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="SONDE_DATA">Sonde data</string>
    <string name="TAP_HERE_TO_CHANGE_SONDE_TYPE_FREQUENCY">Tap here to change sonde type &amp; frequency</string>
    <string name="NOTIFY_RECOVERY">Notify recovery</string>
    <string name="SEND_REPORT">Send report</string>
    <string name="SONDEHUB_REPORT">Sondehub report</string>
    <string name="USER">user</string>
    <string name="coord_closed">coord▲</string>
    <string name="coord_open">coords▼</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="altitude">altitude</string>
    <string name="description">description</string>
    <string name="INVALID_LATITUDE">Invalid latitude</string>
    <string name="INVALID_LONGITUDE">Invalid longitude</string>
    <string name="INVALID_ALTITUDE">Invalid altitude</string>
    <string name="failed_try_again">Failed, try again?</string>
    <string name="reporting_result">Reporting result:\n\n\"%1$s\"</string>
    <string name="failed_to_send_report">Failed to send report! (%1$s)</string>
    <string name="error_sending_report_status">Error sending report (status: %1$s)</string>
    <string name="unknown_error">Unknown error %1$s</string>
    <string name="user_name_must_be_specified">User name must be specified</string>
    <string name="please_add_a_description">Please add a description</string>
    <string name="report_sent_successfully">Report sent successfully</string>
    <string name="settings_not_available_for_this_receiver">Settings not available for this receiver</string>
    <string name="skip_tutorial">Skip tutorial</string>
    <string name="no_receiver_found">No receiver found</string>
    <string name="chose_connection">Chose connection</string>
    <string name="bluetooth_classic">Bluetooth Classic</string>
    <string name="bluetooth_low_energy">Bluetooth Low Energy</string>
    <string name="no_receiver">No receiver</string>
    <string name="exit">Exit</string>
    <string name="what_s_new">What\'s new</string>
    <string name="close">Close</string>
    <string name="hunting_mode_on">Hunting mode ON</string>
    <string name="hunting_mode_off">Hunting mode OFF</string>
    <string name="cannot_access_remote_firmware_updates_database">Cannot access remote firmware updates database</string>
    <string name="pollicino_mode">Pollicino mode %1$s</string>
    <string name="connect_to_mysondygo_v2">Connect to a MySondyGO v2 receiver</string>
    <string name="connect_to_mysondygo_v3_or_trovalasondafw_receiver">Connect to a MySondyGO v3 or TrovaLaSondaFw receiver</string>
    <string name="nearby_sonde_detected">Nearby sonde detected</string>
    <string name="do_you_want_to_automatically_setup_the_receiver_mhz">Do you want to automatically setup the receiver?\n(%1$s %2$.3fMHz)</string>
    <string name="you_must_enable_geolocation_in_order_to_use_this_app">You must enable geolocation in order to use this app</string>
    <string name="enable">Enable</string>
    <string name="chase_car">Chase car</string>
    <string name="seems_to_be_in_proximity_of_the_nearest_sonde">%1$s seems to be in proximity of the nearest sonde, please check</string>
    <string name="planned_recovery">Planned recovery</string>
    <string name="radiosondy_planned_recovery">According to radiosondy.info, user \"%1$s\" has planned to recover the sonde %3$s!\nMessage: \"%2$s\"</string>
    <string name="sondehub_planned_recovery">According to sondehub.org, user \"%1$s\" has planned to recover the sonde %3$s!\nMessage: \"%2$s\"</string>
    <string name="sondehub_user_recovered_the_sonde">Sondehub user %1$s recovered the sonde %3$s (%2$s)</string>
    <string name="sonde_recovered">Sonde recovered</string>
    <string-array name="display_types">
        <item>SSD1306</item>
        <item>SH1106</item>
    </string-array>
    <string-array name="battery_types">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </string-array>
    <string-array name="bandwidth">
        <item>2600</item>
        <item>3100</item>
        <item>3900</item>
        <item>5200</item>
        <item>6300</item>
        <item>7800</item>
        <item>10400</item>
        <item>12500</item>
        <item>15600</item>
        <item>20800</item>
        <item>25000</item>
        <item>31300</item>
        <item>41700</item>
        <item>50000</item>
        <item>62500</item>
        <item>83300</item>
        <item>100000</item>
        <item>125000</item>
        <item>166700</item>
        <item>200000</item>
    </string-array>
    <string-array name="nam">
        <item>SERIAL</item>
        <item>APRS</item>
    </string-array>
</resources>