<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/sonde_settings"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/type"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <NumberPicker
            android:id="@+id/f100"
            android:gravity="center"
            android:layout_marginStart="20sp"
            android:layout_width="25sp"
            android:theme="@style/NumberPickerText"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/f10"
            android:layout_width="25sp"
            android:gravity="center"
            android:theme="@style/NumberPickerText"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/f1"
            android:layout_width="25sp"
            android:theme="@style/NumberPickerText"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/f01"
            android:layout_marginStart="15sp"
            android:layout_width="25sp"
            android:theme="@style/NumberPickerText"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/f001"
            android:layout_width="25sp"
            android:theme="@style/NumberPickerText"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/f0001"
            android:layout_width="25sp"
            android:theme="@style/NumberPickerText"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_marginStart="20sp"
            android:hint="@string/frequency"
            android:text="@string/mhz"/>
    </LinearLayout>
</LinearLayout>